results/SVCOMP/4-shot/log-ExSymExe16-2024_03_18_18_29_36.txt
class Main {
  static int field;

  //@ ensures \result <==> field == 0;
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }
  
  //@ requires z == field;
  //@ ensures \result <==> z == 0;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe16");
    int y = 3;
    x = z - y;
    if (z == 0) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (x == 0) System.out.println("branch BOO1");
    else
      System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> field == 0;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:12: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires z == field;
                    ^
2 errors

